Changes in 0.6.1
- recompression support for gzip files made with zlib:gzio.c or gzip -n
- fix compilation on MacOS X
- fix unecessary transfer of whole file where file is smaller than the context
  size (1x or 2x blocksize)
- use sequential_matches=1 when there is only one block; otherwise we're forced
  to transfer the whole file for files below 2kiB
- fix librcksum handling of zsync streams with sequential_matches == 1; it was 
  giving false negatives when applying the rsync algorithm, resulting in poor
  use of local source data when sequential_matches == 1 (which didn't actually
  occur in any recent version of zsync)

Changes in 0.6
- fix out-of-bounds memory access when processing last block of non-compressed
  download (patch from Timothy Lee). Also fix an error handling fault for the
  same.
- fix "try a smaller blocksize" failures when zsyncmakeing for huge compressed
  files on 32bit systems
- preserve mtime on downloaded files
- fix potential crash when re/deallocating checksum hash in librcksum (patch
  from Timothy Lee)
- explain status code errors better
- better URL handling
- add -q as a substitute for -s, as -q is more conventional (re wget). -q also
  suppresses the 'no relevant local data' warning now.
- fix some warnings
- code tidy-up and better commenting of what it is doing
- tidy up autoconf use

Changes in 0.5
- get large file support where possible
- replacement getaddrinfo on systems that lack it
- fix compilation on MacOS X

Changes in 0.4.3
- make -s suppress summary info too
- add HTTP authentication support

Changes in 0.4.2
- fix CAN-2005-1849 for embedded zlib
- obey -s flag

Changes in 0.4.1
- security fix from zlib-1.2.2
- generate RFC 1123 date strings in HTTP requests
- include port numbers in Host headers
- be slightly more accepting in proxy URL syntax
- don't generate Accept-Ranges headers

Changes in 0.4.0
- now considered beta instead of alpha quality